--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,12 +1,17 @@
-<h1>Products Page</h1>
-<h2>Current Contents:</h2>
+<h1> Products </h1>
 <ul>
-<% cart.each do |product| %>
-    <li><%= product %></li>
+  <% if cart %>
+    <% cart.each do |item| %>
+    <%# iterating over cart method, not variable to get individual items from the array.
+    We are accessing the same helper method cart that we defined in the application controller through declaring the helper_method: cart.%>
+    <li><%= item %></li>
+  <% end %>
 <% end %>
 </ul>
 
-<%= form_tag("/") do %>
-    <%= text_field_tag :product %>
-    <%= submit_tag "add to cart" %>
-<% end %>    
+<h1> Add a Product </h1>
+<%= form_tag('/', method: :post) do %>
+<%= label_tag :product %>
+<%= text_field_tag :product %>
+<%= submit_tag "add to cart" %>
+<% end %>
