--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,10 +1,9 @@
 <h1> Products </h1>
 <ul>
-  <% if cart %>
-    <% cart.each do |item| %>
+    <% cart.each do |product| %>
     <%# iterating over cart method, not variable to get individual items from the array.
     We are accessing the same helper method cart that we defined in the application controller through declaring the helper_method: cart.%>
-    <li><%= item %></li>
+    <li><%= product %></li>
   <% end %>
 <% end %>
 </ul>
