--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <h1> Products </h1>
 <ul>
-    <%= cart.each do |product| %>
+    <% cart.each do |product| %>
 
     <li><%= product %></li>
 <% end %>
